completed about me page

--- a/src/common/styles/styles.scss
+++ b/src/common/styles/styles.scss
@@ -1,5 +1,9 @@
 @import './variables.scss'; 
 
+.details {
+	margin: 0px 200px;
+}
+
 .landing-page {
 	display: flex;
 	flex: 1;
@@ -36,3 +40,47 @@
 		}
 	}
 } 
+
+.about-me {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin-top: 60px;
+	flex-wrap: wrap;
+	.img-container {
+		max-height: 570px;
+		max-width: 496px;
+		overflow: hidden; 
+		box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+		img{
+			width: 100%;
+			height: 100%;
+		}
+	}
+	.text {
+		padding-left: 45px;
+		max-width: 510px;
+		.MuiTypography-h2 {
+			text-align: left;
+			font-size: 36px;
+			font-weight: 400;
+			display: block;
+			font-family: $about_me_title;
+		}
+		.border {
+			margin-top: 28px;
+			margin-bottom: 22px;
+			border-top: 3px solid rgb(129, 193, 50);
+			width: 64px;
+		}
+		.MuiTypography-h3 {
+			font-size: 16px;
+			font-family: $about_me_caption;
+			font-weight: 600;
+			line-height: 25.6px;
+			box-sizing: border-box;
+			text-align: left;
+		}
+	}
+}
