--- a/src/common/styles/variables.scss
+++ b/src/common/styles/variables.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 $caption: 'Open Sans', sans-serif;
 $title: 'Playfair Display', serif; 
@@ -9,3 +11,5 @@ $color3: #b3c3b9;
 $white: #FFF;  
 $footer:  #333; 
 $background: '../img/background.jpg';
+$about_me_title: 'Merriweather', serif;
+$about_me_caption: 'Open Sans', sans-serif;
