--- a/src/common/styles/styles.scss
+++ b/src/common/styles/styles.scss
@@ -84,3 +84,26 @@
 		}
 	}
 }
+
+.experience {
+	margin-top: 85px;
+	.MuiTypography-h1 {
+		font-size: 36px;
+		font-family: $about_me_title;
+	}
+	.border {
+		width: 114px;
+		height: 3px;
+		transform-origin: right center 0;
+		margin: 30px auto 0;
+		border-top: 3px solid rgb(129, 193, 50);
+	}
+	.container {
+		margin-top: 30px;
+	}
+	img {
+		border-radius: 20px;
+		width: 100%;
+		height: 100%;
+	}
+}
