--- a/src/common/styles/styles.scss
+++ b/src/common/styles/styles.scss
@@ -113,7 +113,12 @@
 
 //Header Components styling 
 .header{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	.MuiTypography-h1 {
+		max-width: 700px; //this can be adjusted
+		word-wrap: break-word;
 		font-size: 36px;
 		font-family: $about_me_title;
 	}
