--- a/src/common/styles/styles.scss
+++ b/src/common/styles/styles.scss
@@ -108,7 +108,10 @@
 }
 
 .photography {
-	padding: 50px 0px; 
+	padding: 50px 100px; 
+	img{
+		object-fit: cover;
+	}
 }
 
 //Header Components styling 
